[gd_scene format=3 uid="uid://xidmvitbffrb"]

[ext_resource type="Script" uid="uid://cp342oj2efc1p" path="res://scenes/LootResultScreen.gd" id="1_loot"]

[node name="LootResultScreen" type="Control" unique_id=2035183221]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_loot")

[node name="Background" type="TextureRect" parent="." unique_id=1018799003]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="FallbackBg" type="ColorRect" parent="." unique_id=2028645517]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1025210087]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer" unique_id=466667875]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer" unique_id=760801156]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer" unique_id=789634338]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1196250240]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BOSS LOOT!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=38924169]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=885455228]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Super Weapon"
horizontal_alignment = 1

[node name="ItemTypeLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=696863965]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Primary - Lv.5"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=2144879789]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Panel" unique_id=1237312690]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=572640404]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=797777726]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="EquipButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer" unique_id=408543210]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ã‰quiper"
icon_alignment = 1

[node name="DisassembleButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer" unique_id=920970897]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Recycler"
icon_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1860613718]
layout_mode = 2

[node name="SessionLootContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=780710581]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="SessionTitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SessionLootContainer" unique_id=575727419]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "BUTIN DE SESSION"
horizontal_alignment = 1

[node name="InventoryHBox" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SessionLootContainer" unique_id=1926974066]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PrevButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SessionLootContainer/InventoryHBox" unique_id=999590287]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "<"

[node name="ItemsGrid" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SessionLootContainer/InventoryHBox" unique_id=1083273812]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NextButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SessionLootContainer/InventoryHBox" unique_id=476662037]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = ">"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=971115424]
layout_mode = 2

[node name="NavigationButtons" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1287896151]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NavigationButtons" unique_id=8533450]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Recommencer"

[node name="ExitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NavigationButtons" unique_id=316260172]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Quitter"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/EquipButton" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/DisassembleButton" to="." method="_on_disassemble_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NavigationButtons/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/NavigationButtons/ExitButton" to="." method="_on_exit_pressed"]
